css/index.css
* {
	padding: 0px;
	margin: 0px;
    font-family: Helvetica !important;
}

html, body {
	padding: 0px;
	margin: 0px;
	height: 100%;
	overflow-x: hidden;
	overflow-y: hidden;
}

header {
	padding: 0px;
	margin: 0px;
	height: 50px;
	font-family: Helvetica;
	font-weight: bolder;
	color: white;
	background-color: #3c2b21;
	position: relative;
}

header a {
    color: white;
}

header a:active {
    color: #3c2b21 !important;
}

header span {
    height: 100%;
    position: relative;
}

.column {
    padding: 10px 10px;
}

.fill {
    min-height: 100%;
}

.bold {
    font-size: 1.2em;
    font-weight: bolder;
    text-transform: uppercase;
}

.contentBox {
    background-color: #f4f3ea;
    color: #3c2b21;
    margin-bottom: 10px;
}

.title {
    text-align: center;
    font-weight: bolder;
    color: #3c2b21;
    padding-bottom: 10px;
}

#currentColumn {
	padding-top: 30px;
}

#logo {
    display: inline;
    right: 20%;
    position: absolute;
}

#tlnav {
    width: inherit !important;
    height: auto !important;
    margin: 0 !important;
    position: absolute;
    left: 20%;
    top: 30%;
}

#tlnav li {
    display: inline;
    margin-right: 20px;
}

/*
#listingsColumn {
	background-color: #10ff1c;
}

#eventsColumn {
	background-color: #00ffe7;
}*/

@media (min-width: 768px) and (max-width: 979px) {

}

@media (max-width: 767px) {

}

@media (min-width: 1200px) {

}

@media (min-width: 768px) and (max-width: 979px) {

}

@media (max-width: 767px) { /* Phones */
    html , body {
        overflow-y: auto;
    }

    body {
	   padding: 0px;
	   margin: 0px;
	   height: 100%;
	   background-color: #f4f3ea;
    }
    
    #content {
       padding: 0px;
	   margin: 0px;
    }
    
    .column {
        background-color: #ffffff;
        margin: 0px 10px 20px 10px;
        box-shadow: 3px 3px #CCC;
    }
    
    #logo {
        left:20%;
    }
    
    #tlnavBottom ul {
        margin: 0 !important;
    }
    
    #tlnavBottom li {
        display: block;
        height: 3em;
        line-height: 3em;
        list-style: none;
        text-align: center;
        background-color: #3c2b21;
        margin-bottom: 10px;
        padding: 0;
    }
    
    #tlnavBottom li a {
        color: white;
    }
    
    #tlnavBottom li a {
        text-decoration: none;
    }
}

@media (max-width: 480px) { 


@media (max-width: 979px) {

}

@media (min-width: 980px) {

}

